<resources>
    <string name="app_name">EXAMENT1</string>
    <string name="titulo_restaurante">Burger King</string>
    <string name="asientos2">2 Asientos</string>
    <string name="asientos4">4 Asientos</string>
    <string name="asientos8">8 Asientos</string>
    <string name="Titulo_nombre">INTRODUZCA SU NOMBRE</string>
    <string name="hora1">20:00</string>
    <string name="hora2">21:00</string>
    <string name="hora3">22:00</string>

</resources>