<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamT1"
    android:background="@color/fondoApp"
    >

    <TextView
        android:id="@+id/textoRestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_restaurante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textColor="@color/textos"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/mesa_2_asientos"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textoRestaurante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/mesa_4_asientos"
        app:cardCornerRadius="25dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/elemento"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_mesa"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asientos2"
                android:textStyle="bold"
                android:textSize="15dp"

                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/mesa_4_asientos"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textoRestaurante"
        app:layout_constraintStart_toEndOf="@+id/mesa_2_asientos"
        app:layout_constraintEnd_toStartOf="@+id/mesa_8_asientos"
        app:cardCornerRadius="25dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/elemento"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_mesa"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asientos4"
                android:textStyle="bold"
                android:textSize="15dp"

                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView

        android:id="@+id/mesa_8_asientos"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textoRestaurante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mesa_4_asientos"
        app:cardCornerRadius="25dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/elemento"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_mesa"
                app:tint="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asientos8"
                android:textStyle="bold"
                android:textSize="15dp"

                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/tvIntroduzca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mesa_4_asientos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        >
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Titulo_nombre"
            android:textColor="@color/textos"
            android:textSize="20dp"
            android:textStyle="bold"
            />
    </LinearLayout>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Name..."
            app:layout_constraintTop_toBottomOf="@+id/tvIntroduzca"
            android:background="@color/fondo_caja_texto"
            android:layout_margin="16dp"
            android:textStyle="bold"
            />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:layout_margin="16dp"
        app:cardCornerRadius="25dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fondo_caja_texto"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/horaMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                app:maxImageSize="80dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20:00"
                android:textStyle="bold"
                android:textSize="38dp"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/horaMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_next"
                app:maxImageSize="80dp"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        app:maxImageSize="50dp" />



</androidx.constraintlayout.widget.ConstraintLayout>